add path to hg-git to .hgrc

--- a/.hgrc
+++ b/.hgrc
@@ -6,7 +6,7 @@ username = Kyle Isom <coder@kyleisom.net>
 bookmarks=
 color=
 eol=
-git=
+git=~/.mercurial/hg-git/hggit
 graphlog=
 pager=
 progress=
