--- a/.hgrc
+++ b/.hgrc
@@ -6,7 +6,7 @@ username = Kyle Isom <coder@kyleisom.net>
 bookmarks=
 color=
 eol=
-git=~/.mercurial/hg-git/hggit
+#git=~/.mercurial/hg-git/hggit
 hgext.convert=
 graphlog=
 pager=
