use hggit for git<-mercurial support

--- a/.hgrc
+++ b/.hgrc
@@ -6,7 +6,7 @@ username = Kyle Isom <coder@kyleisom.net>
 bookmarks=
 color=
 eol=
-#git=~/.mercurial/hg-git/hggit
+hggit=
 hgext.convert=
 graphlog=
 pager=
